--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -6,6 +6,7 @@
     margin: 0;
     list-style: none;
     text-decoration: none !important;
+    box-sizing: border-box;
 }
 
 .nav-bar-p {
@@ -48,6 +49,13 @@ header {
     }
 }
 
+.sec-1 {
+    display: flex;
+    align-items: center;
+    img{
+        width: 100%;
+    }
+}
 
 .sec-1-p1 {
     color: #596C72;
@@ -80,13 +88,25 @@ header {
     background-color: #FFC01F;
 }
 
+
 .techniques {
     .tech-card {
         background-color: white;
         box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-        width: 315px;
         padding: 25px 0 0;
+        transition: 500ms;
+
+
+        img {
+            width: 100%;
+        }
     }
+
+    .tech-card:hover {
+        transform: scale(1.06);
+        cursor: pointer;
+    }
+
 
     .tech-cards_p {
         text-align: center;
@@ -94,5 +114,24 @@ header {
         font-size: 22px;
         font-family: 'Montserrat', sans-serif;
         color: #596C72;
+    }
+
+    .tech-card-head_P {
+        font-weight: 700;
+        color: #596C72;
+        font-size: 30px;
+        line-height: 36.57px;
+        font-family: 'Montserrat', sans-serif;
+
+    }
+}
+.left-sc-img{
+    img{
+        // width: 100%;
+    }
+}
+.right-sc{
+    img{
+        width: 100%;
     }
 }
