--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   list-style: none;
   text-decoration: none !important;
+  box-sizing: border-box;
 }
 
 .nav-bar-p {
@@ -39,6 +40,14 @@ header p {
   cursor: pointer;
 }
 
+.sec-1 {
+  display: flex;
+  align-items: center;
+}
+.sec-1 img {
+  width: 100%;
+}
+
 .sec-1-p1 {
   color: #596C72;
   font-weight: 700;
@@ -70,8 +79,15 @@ header p {
 .techniques .tech-card {
   background-color: white;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-  width: 315px;
   padding: 25px 0 0;
+  transition: 500ms;
+}
+.techniques .tech-card img {
+  width: 100%;
+}
+.techniques .tech-card:hover {
+  transform: scale(1.06);
+  cursor: pointer;
 }
 .techniques .tech-cards_p {
   text-align: center;
@@ -79,4 +95,15 @@ header p {
   font-size: 22px;
   font-family: "Montserrat", sans-serif;
   color: #596C72;
+}
+.techniques .tech-card-head_P {
+  font-weight: 700;
+  color: #596C72;
+  font-size: 30px;
+  line-height: 36.57px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.right-sc img {
+  width: 100%;
 }/*# sourceMappingURL=style.css.map */
