--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -17,6 +17,7 @@
     max-width: 1280px;
     width: 100%;
     margin: 0 auto;
+    padding: 10px 10px;
 }
 
 header {
@@ -48,19 +49,38 @@ header {
         cursor: pointer;
     }
 }
+@media (max-width:992px) {
+
+    .right-col{
+        display: none;
+        color: white;
+    }
+    .left-col{
+        width: 100%;
+        background-image: url(..//photo/image\ 1.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 100vh;
+    }
+    
+}
+
 
 .sec-1 {
     display: flex;
     align-items: center;
-    img{
+
+    img {
         width: 100%;
+        padding: 10px 10px;
+        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
     }
 }
 
 .sec-1-p1 {
     color: #596C72;
     font-weight: 700;
-    font-size: 50px;
+    font-size: 44px;
     line-height: 70px;
     font-family: 'Montserrat', sans-serif;
 
@@ -90,6 +110,8 @@ header {
 
 
 .techniques {
+    margin-top: 5rem;
+
     .tech-card {
         background-color: white;
         box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
@@ -125,13 +147,101 @@ header {
 
     }
 }
-.left-sc-img{
-    img{
-        // width: 100%;
+
+.left-sc-img {
+    img {
+        padding: 10px 10px;
+        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
     }
 }
-.right-sc{
-    img{
+
+.right-sc {
+    img {
         width: 100%;
+        padding: 10px 10px;
+        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+    }
+}
+
+.tech-cards {
+    transition: 700ms;
+    &:hover{
+        cursor: pointer;
+        transform: scale(1.07);
+    }
+    .tech-card-p1 {
+        color: #596C72;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 21.94px;
+        font-family: 'Montserrat', sans-serif;
+
+    }
+
+    .tech-card-p2 {
+        color: #686868;
+        font-family: 'Mulish', sans-serif;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17.57px;
+    }
+
+    .tech-card-p3 {
+        color: #B0ADAD;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17.57px;
+    }
+
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+    padding: 5px 20px;
+
+    img {
+        width: 100%;
+    }
+
+    .tech-card-text2 {
+        font-family: 'Montserrat', sans-serif;
+
+        text-align: end;
+        color: #FFC01F;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 21.94px;
+    }
+
+    .tech-card-btn {
+        text-align: center;
+
+        button {
+            border: 1px solid #000;
+            background-color: white;
+            color: #000;
+            padding: 5px 100px;
+            border-radius: 20px;
+            font-family: 'Mulish', sans-serif;
+        }
+
+        button:hover {
+            background-color: #FFC01F;
+
+        }
+    }
+}
+.tech-card-botto-button{
+    transition: 100ms;
+    margin-top: 3rem;
+    text-align: center;
+    button{
+        border: 1px solid #000;
+        background-color: #FFC01F;
+        color: #000;
+        padding: 8px 50px;
+        border-radius: 20px;
+        font-family: 'Mulish', sans-serif;
+    }
+    button:hover{
+        transform: scale(1.1);
+        background-color: white;
     }
 }
