--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -14,6 +14,7 @@
   max-width: 1280px;
   width: 100%;
   margin: 0 auto;
+  padding: 10px 10px;
 }
 
 header {
@@ -40,18 +41,33 @@ header p {
   cursor: pointer;
 }
 
+@media (max-width: 992px) {
+  .right-col {
+    display: none;
+    color: white;
+  }
+  .left-col {
+    width: 100%;
+    background-image: url(..//photo/image\ 1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+  }
+}
 .sec-1 {
   display: flex;
   align-items: center;
 }
 .sec-1 img {
   width: 100%;
+  padding: 10px 10px;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 .sec-1-p1 {
   color: #596C72;
   font-weight: 700;
-  font-size: 50px;
+  font-size: 44px;
   line-height: 70px;
   font-family: "Montserrat", sans-serif;
 }
@@ -76,6 +92,9 @@ header p {
   background-color: #FFC01F;
 }
 
+.techniques {
+  margin-top: 5rem;
+}
 .techniques .tech-card {
   background-color: white;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
@@ -104,6 +123,86 @@ header p {
   font-family: "Montserrat", sans-serif;
 }
 
+.left-sc-img img {
+  padding: 10px 10px;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
 .right-sc img {
   width: 100%;
+  padding: 10px 10px;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
+.tech-cards {
+  transition: 700ms;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  padding: 5px 20px;
+}
+.tech-cards:hover {
+  cursor: pointer;
+  transform: scale(1.07);
+}
+.tech-cards .tech-card-p1 {
+  color: #596C72;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 21.94px;
+  font-family: "Montserrat", sans-serif;
+}
+.tech-cards .tech-card-p2 {
+  color: #686868;
+  font-family: "Mulish", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17.57px;
+}
+.tech-cards .tech-card-p3 {
+  color: #B0ADAD;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17.57px;
+}
+.tech-cards img {
+  width: 100%;
+}
+.tech-cards .tech-card-text2 {
+  font-family: "Montserrat", sans-serif;
+  text-align: end;
+  color: #FFC01F;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 21.94px;
+}
+.tech-cards .tech-card-btn {
+  text-align: center;
+}
+.tech-cards .tech-card-btn button {
+  border: 1px solid #000;
+  background-color: white;
+  color: #000;
+  padding: 5px 100px;
+  border-radius: 20px;
+  font-family: "Mulish", sans-serif;
+}
+.tech-cards .tech-card-btn button:hover {
+  background-color: #FFC01F;
+}
+
+.tech-card-botto-button {
+  transition: 100ms;
+  margin-top: 3rem;
+  text-align: center;
+}
+.tech-card-botto-button button {
+  border: 1px solid #000;
+  background-color: #FFC01F;
+  color: #000;
+  padding: 8px 50px;
+  border-radius: 20px;
+  font-family: "Mulish", sans-serif;
+}
+.tech-card-botto-button button:hover {
+  transform: scale(1.1);
+  background-color: white;
 }/*# sourceMappingURL=style.css.map */
