--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -54,7 +54,6 @@ header {
 
     .right-col {
         display: none;
-        color: white;
     }
 
     .left-col {
@@ -63,8 +62,23 @@ header {
         background-repeat: no-repeat;
         background-size: cover;
         height: 100vh;
+        color: white;
     }
+    .sec-1-p1{
+        color: white !important;
+    }
+    .tech-card{
+        display: flex;
+        p{
+            text-align: center;
+            margin: 0 auto;
+            padding: 10px 10px;
+        }
+        img{
+            display: none;
 
+        }
+    }
 }
 
 
@@ -118,8 +132,6 @@ header {
         background-color: white;
         box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
         padding: 25px 0 0;
-        transition: 500ms;
-
 
         img {
             width: 100%;
@@ -127,7 +139,6 @@ header {
     }
 
     .tech-card:hover {
-        transform: scale(1.06);
         cursor: pointer;
     }
 
@@ -166,12 +177,6 @@ header {
 }
 
 .tech-cards {
-    transition: 700ms;
-
-    &:hover {
-        cursor: pointer;
-        transform: scale(1.07);
-    }
 
     .tech-card-p1 {
         color: #596C72;
@@ -251,4 +256,28 @@ header {
         transform: scale(1.1);
         background-color: white;
     }
+}
+
+.mark-head-p {
+    p {
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 36.57px;
+        color: #596C72;
+        text-align: center;
+        margin-top: 5rem;
+        margin-bottom: 2rem;
+    }
+}
+
+.marks {
+    .mark {
+        background-color: white;
+
+    }
+}
+
+.swiper {
+    width: 100%;
+    height: 300px;
 }
