--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -9,6 +9,10 @@
     box-sizing: border-box;
 }
 
+// body{
+//     font-size: 16px;
+// }
+
 .nav-bar-p {
     margin: 0 !important;
 }
@@ -212,6 +216,11 @@ header {
 }
 
 .tech-cards {
+
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+    padding: 5px 5px;
+    border-radius: 10px;
+
     .tech-card-p1 {
         color: #596C72;
         font-weight: 600;
@@ -236,8 +245,6 @@ header {
         line-height: 17.57px;
     }
 
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-    padding: 5px 20px;
 
     img {
         width: 100%;
@@ -431,7 +438,8 @@ header {
 
 .contact-buttn {
     button {
-        padding: 10px 222px;
+        width: 100%;
+        padding: 10px 0;
         border-radius: 30px;
         border: none;
         background-color: #FFC01F;
@@ -440,6 +448,14 @@ header {
 
     button:hover {
         background-color: white;
+    }
+}
+
+@media(max-width:1200px) {
+    .contact-buttn {
+        button {
+            // width: 50%;
+        }
     }
 }
 
@@ -473,8 +489,11 @@ header {
     }
 
     .contact-part__all {
-        height: 555px;
+        height: 625px;
+        width: 100%;
     }
+
+
 }
 
 .foot-top-part {
@@ -503,6 +522,7 @@ header {
     img {
         box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
         padding: 10px 10px;
+        max-width: 100%;
     }
 }
 
@@ -531,19 +551,51 @@ header {
         color: white !important;
     }
 
-} 
+}
 
 
 footer {
-    background-color: #FFC01F66;
+    background-image: url(../photo/Mask\ group.png);
 
     .foot-about {
         display: flex;
         justify-content: space-between;
+        margin-bottom: 3rem;
+        gap: 70px;
     }
 }
 
-.foot-bottom{
+.foot-bottom {
     display: flex;
     justify-content: space-between;
+}
+
+.footer-log {
+    h1 {
+        margin-top: 20px;
+    }
+}
+
+@media(max-width:576px) {
+    .footer-log {
+        background-image: url(../logo/logo.png);
+        height: 12vh;
+        background-repeat: no-repeat;
+
+        h1 {
+            display: none;
+        }
+    }
+
+    .foot-icon {
+        display: flex;
+        // align-items: center;
+        // justify-content: center;
+        gap: 100px;
+        font-size: 25px;
+        margin-bottom: 2em;
+    }
+    // .foot-icon_text{
+    //     text-align: center;
+    // }
 }
