--- a/assets/scss/_techniques.scss
+++ b/assets/scss/_techniques.scss
@@ -1,9 +1,54 @@
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
 .tech-text {
     p {
         font-size: 30px;
         font-weight: 700;
         text-align: center;
         color: #596C72;
-        
+        margin-top: 5rem;
     }
+}
+
+
+
+.tech-list-border {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 1px solid #353535;
+    border-radius: 30px;
+    padding: 5px 20px;
+    margin: 0 auto;
+    width: 90%;
+
+    p {
+        margin: 0 auto;
+    }
+    p:hover{
+        color: #FFC01F;
+        cursor: pointer;
+    }
+}
+
+.techs_list {
+    .techs_list_all-txt {
+        background-color: #FFC01F;
+        text-align: center;
+        position: absolute;
+        border-radius: 30px;
+
+        p {
+            margin: 0 auto;
+            padding: 6px 18px;
+        }
+    }
+}
+
+.scrool {
+    text-align: center;
+    margin-top: 2em;
+    margin-bottom: 5em;
 }
