--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -54,7 +54,7 @@ header {
 
 // -------------------SECTION_1---------------------------
 
-section {
+.section {
     display: flex;
     flex-direction: column;
     align-items: center;
