--- a/assets/scss/_tech-about.scss
+++ b/assets/scss/_tech-about.scss
@@ -40,7 +40,7 @@
     padding: 10px 10px;
 
 
-    .product-name-txt {
+    .product-head-txt {
         display: flex;
         justify-content: space-between;
 
