--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -635,20 +635,20 @@ body {
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
   padding: 10px 10px;
 }
-.product-name-part .product-name-txt {
+.product-name-part .product-head-txt {
   display: flex;
   justify-content: space-between;
 }
-.product-name-part .product-name-txt .product-name-txt1 {
+.product-name-part .product-head-txt .product-name-txt1 {
   font-size: 23px;
   line-height: 24.38px;
   font-weight: 600;
   color: #596C72;
 }
-.product-name-part .product-name-txt .product-name-txt2 {
+.product-name-part .product-head-txt .product-name-txt2 {
   font-size: 14px;
 }
-.product-name-part .product-name-txt span .product-name-bottom-txt {
+.product-name-part .product-head-txt span .product-name-bottom-txt {
   position: relative;
   bottom: 12px;
 }/*# sourceMappingURL=style.css.map */
