--- a/assets/scss/_tech-about.scss
+++ b/assets/scss/_tech-about.scss
@@ -23,6 +23,10 @@
     flex-direction: column;
 }
 
+
+// ----------------RENT_SEC-------------------
+
+
 .rent-sec {
     display: flex;
     gap: 10px;
@@ -33,16 +37,19 @@
 }
 
 
-.product-name-part {
+.product--part {
     // margin: 0 auto;
     width: 100%;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-    padding: 10px 10px;
-
+    padding: 35px 45px;
+    display: flex;
+    flex-direction: column;
+    gap: 3em;
 
     .product-head-txt {
         display: flex;
         justify-content: space-between;
+        margin-top: 4em;
 
         .product-name-txt1 {
             font-size: 23px;
@@ -53,13 +60,65 @@
 
         .product-name-txt2 {
             font-size: 14px;
+            color: #B0ADAD;
+            font-weight: 400;
+            line-height: 17.57px;
+        }
+
+    }
+
+    .product-part-lorem {
+        margin-bottom: 3em;
+
+        p {
+            font-size: 13px;
+            font-weight: 400;
+            line-height: 21px;
+            color: #69768B;
+        }
+    }
+
+    span {
+        .product-name-bottom-txt {
+            position: relative;
+            bottom: 19px;
+        }
+    }
+
+
+    .rent-price-txt_in {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+
+        p {
+            font-size: 18px;
+            font-weight: 600;
+            line-height: 18.29px;
+            color: #596C72;
         }
 
         span {
-            .product-name-bottom-txt {
-                position: relative;
-                bottom: 12px;
-            }
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 24.38px;
+            color: #FFC01F;
         }
+    }
+}
+
+.rent-button {
+    button {
+        border: none;
+        background-color: #FFC01F;
+        color: #353535;
+        width: 100%;
+        padding: 6px 0px;
+        border-radius: 20px;
+        transition: 100ms;
+    }
+
+    button:hover {
+        background-color: white;
     }
 }
